# freqfs

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
.github/: FUNDING.yml
examples/: example.rs
src/: cache.rs  dir.rs  file.rs  lib.rs
