[package]
name = "freqfs"
version = "0.8.1"
authors = ["code@tinychain.net"]
edition = "2021"
license = "Apache-2.0"
description = "An in-memory filesystem cache layer over tokio::fs, with LFU eviction"
repository = "https://github.com/haydnv/freqfs"
readme = "README.md"

categories = ["caching", "filesystem", "memory-management"]
keywords = ["file", "io", "cache"]

[[example]]
name = "example"
required-features = ["stream"]

[features]
all = ["id", "logging", "stream"]
id = ["hr-id"]
logging = ["log"]
stream = ["bytes", "destream", "tbon", "tokio-util"]

[dependencies]
async-trait = "0.1"
bytes = { version = "1.4", optional = true }
destream = { version = "0.7", optional = true }
ds-ext = "0.1"
futures = "0.3"
hr-id = { version = "0.4", optional = true }
log = { version = "0.4", optional = true }
safecast = "0.2"
tbon = { version = "0.5", features = ["tokio-io"], optional = true }
tokio = { version = "1.29", features = ["fs", "io-util", "rt-multi-thread", "sync", "time"] }
tokio-util = { version = "0.7", features = ["io"], optional = true }
uuid = { version = "1.4", features = ["v4"] }

[dev-dependencies]
rand = "0.8"
tokio = { version = "1.29", features = ["macros"] }
